Adding setting for building a docker image.